fixed course homepage alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,9 +89,14 @@ background: linear-gradient(to top, rgba(255,187,128,1) 0%, rgba(242,207,187,1) 
     color:#063737;
 }
 
+#assignments h2 {
+    margin-bottom:25px;
+}
+
 .assignments-container {
     margin-top:15px;
-    /*max-width:800px;*/
+    max-width:1000px;
+    margin:auto;
     display:flex;
     flex-wrap:wrap;
     gap:25px;
